feat: make markup index.html,add styles for page and base

--- a/index.html
+++ b/index.html
@@ -9,6 +9,96 @@
     <title>Burger-menu</title>
 </head>
 <body>
-
+<div class="wrapper">
+    <header class="header">
+        <div class="header__container">
+            <a class="header__logo"></a>
+            <div class="header__menu menu">
+                <div class="menu__icon">
+                    <span></span>
+                </div>
+                <nav class="menu__body">
+                    <ul class="menu__list">
+                        <li><a href="#" class="menu__link">Section 1</a></li>
+                        <li><a href="#" class="menu__link">Section 2</a></li>
+                        <li><a href="#" class="menu__link">Section 3</a></li>
+                        <li><a href="#" class="menu__link">Subsection
+                            1</a>
+                            <ul class="menu__sub-list">
+                                <li><a href="#" class="menu__sub-link">text1</a></li>
+                                <li><a href="#" class="menu__sub-link">text2</a></li>
+                                <li><a href="#" class="menu__sub-link">text3</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#" class="menu__link">Subsection 2</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="page">
+        <section class="page__section section-1">
+            <h1 class="page__title">Main title</h1>
+            <div class="page__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consectetur corporis delectus enim
+                    excepturi expedita fugiat, laboriosam odit sint! Dicta, labore totam. Consectetur dolorum in itaque
+                    odio soluta ullam voluptatibus?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur eos eum ex, laborum magnam nam
+                    officia optio quae, quam repudiandae sapiente suscipit veniam. Minus nostrum quidem totam unde,
+                    vitae voluptate?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, ea enim explicabo quasi ratione
+                    voluptas. Accusamus animi at dolorum, ducimus eos, expedita minus odio officia quae quas quibusdam
+                    suscipit tempora.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias blanditiis consectetur dolores esse,
+                    facere iste iure laudantium molestiae necessitatibus neque pariatur quibusdam, quis quisquam ratione
+                    repellendus rerum voluptatum. Autem, doloremque.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi consectetur ea iure molestias
+                    nisi quam, reprehenderit vero vitae voluptatem. Facere nesciunt odit quia vero. Dignissimos eligendi
+                    illum sequi! Inventore!</p>
+            </div>
+        </section>
+        <section class="page__section section-2">
+            <h2 class="page__title-2">Secondary Title</h2>
+            <div class="page__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consectetur corporis delectus enim
+                    excepturi expedita fugiat, laboriosam odit sint! Dicta, labore totam. Consectetur dolorum in itaque
+                    odio soluta ullam voluptatibus?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur eos eum ex, laborum magnam nam
+                    officia optio quae, quam repudiandae sapiente suscipit veniam. Minus nostrum quidem totam unde,
+                    vitae voluptate?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, ea enim explicabo quasi ratione
+                    voluptas. Accusamus animi at dolorum, ducimus eos, expedita minus odio officia quae quas quibusdam
+                    suscipit tempora.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias blanditiis consectetur dolores esse,
+                    facere iste iure laudantium molestiae necessitatibus neque pariatur quibusdam, quis quisquam ratione
+                    repellendus rerum voluptatum. Autem, doloremque.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi consectetur ea iure molestias
+                    nisi quam, reprehenderit vero vitae voluptatem. Facere nesciunt odit quia vero. Dignissimos eligendi
+                    illum sequi! Inventore!</p>
+            </div>
+        </section>
+        <section class="page__section section-3">
+            <h2 class="page__title-2">Secondary Title</h2>
+            <div class="page__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consectetur corporis delectus enim
+                    excepturi expedita fugiat, laboriosam odit sint! Dicta, labore totam. Consectetur dolorum in itaque
+                    odio soluta ullam voluptatibus?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur eos eum ex, laborum magnam nam
+                    officia optio quae, quam repudiandae sapiente suscipit veniam. Minus nostrum quidem totam unde,
+                    vitae voluptate?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, ea enim explicabo quasi ratione
+                    voluptas. Accusamus animi at dolorum, ducimus eos, expedita minus odio officia quae quas quibusdam
+                    suscipit tempora.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias blanditiis consectetur dolores esse,
+                    facere iste iure laudantium molestiae necessitatibus neque pariatur quibusdam, quis quisquam ratione
+                    repellendus rerum voluptatum. Autem, doloremque.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi consectetur ea iure molestias
+                    nisi quam, reprehenderit vero vitae voluptatem. Facere nesciunt odit quia vero. Dignissimos eligendi
+                    illum sequi! Inventore!</p>
+            </div>
+        </section>
+    </main>
+</div>
+<script src="src/index.js"></script>
 </body>
 </html>
