feat: add styles for header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <header class="header">
+    <header class="header container">
         <div class="header__container">
             <a class="header__logo"></a>
             <div class="header__menu menu">
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main class="page">
-        <section class="page__section section-1">
+        <section class="page__section section-1 container">
             <h1 class="page__title">Main title</h1>
             <div class="page__text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consectetur corporis delectus enim
