feat: add styles for navigation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="wrapper">
-    <header class="header container">
-        <div class="header__container">
+    <header class="header">
+        <div class="header__container container">
             <a class="header__logo"></a>
             <div class="header__menu menu">
                 <div class="menu__icon">
@@ -24,6 +24,8 @@
                         <li><a href="#" class="menu__link">Section 3</a></li>
                         <li><a href="#" class="menu__link">Subsection
                             1</a>
+                            <!-- собственно стрелка для touch -->
+                            <span class="menu__arrow"></span>
                             <ul class="menu__sub-list">
                                 <li><a href="#" class="menu__sub-link">text1</a></li>
                                 <li><a href="#" class="menu__sub-link">text2</a></li>
@@ -57,7 +59,7 @@
                     illum sequi! Inventore!</p>
             </div>
         </section>
-        <section class="page__section section-2">
+        <section class="page__section section-2 container">
             <h2 class="page__title-2">Secondary Title</h2>
             <div class="page__text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consectetur corporis delectus enim
@@ -77,7 +79,7 @@
                     illum sequi! Inventore!</p>
             </div>
         </section>
-        <section class="page__section section-3">
+        <section class="page__section section-3 container">
             <h2 class="page__title-2">Secondary Title</h2>
             <div class="page__text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consectetur corporis delectus enim
