feat: add in index.js smooth scrolling to sections

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 </div>
                 <nav class="menu__body">
                     <ul class="menu__list">
-                        <li><a href="#" class="menu__link">Section 1</a></li>
-                        <li><a href="#" class="menu__link">Section 2</a></li>
-                        <li><a href="#" class="menu__link">Section 3</a></li>
+<!-- через атрибут data можно получить доступ к элементу через js-->
+                        <li><a data-goto=".section-1" href="#" class="menu__link">Section 1</a></li>
+                        <li><a data-goto=".section-2" href="#" class="menu__link">Section 2</a></li>
+                        <li><a data-goto=".section-3" href="#" class="menu__link">Section 3</a></li>
                         <li><a href="#" class="menu__link">Subsection
                             1</a>
                             <!-- собственно стрелка для touch -->
